# cpp-learn

./: CMakeLists.txt  format_all_files.bat
.github/workflows/: linux-build.yml  windows-build.yml
Source/: main.cpp
Source/Game/: Character.cpp  Character.h  Weapon.cpp  Weapon.h
Source/Utils/: Math.cpp  Math.h
Tests/: main.cpp
